# jitx_backend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  results.db
jitx_backend/: main.py  worker.py
jitx_backend/cnn/: train.py
jitx_backend/models/: model.eqx
mnist_cnn/: main.py  worker.py
mnist_cnn/cnn/model/: model.py
